fix(themes): do not wrap code

--- a/web/src/themes/base/code.css
+++ b/web/src/themes/base/code.css
@@ -373,8 +373,7 @@ stencila-code-chunk {
         margin: 0;
         overflow-x: auto;
         max-width: 100%;
-        word-break: break-all;
-        white-space: pre-wrap;
+        white-space: pre;
 
         code {
             display: block;
